[gd_scene load_steps=6 format=2]

[ext_resource path="res://Source/Tutorials/introText.gd" type="Script" id=1]
[ext_resource path="res://Character models/Menues/Fonts/tourmaline/Tourmaline-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Character models/Tutorials/tutorial_background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_size = 2
font_data = ExtResource( 2 )

[node name="double_tap_tip" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 781, 357 )
texture = ExtResource( 3 )

[node name="dtt_label" type="Label" parent="Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -222.0
margin_right = -500.0
margin_bottom = -335.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "and by the way, If you don't 
want to press a specific button
to perform a \"jump\" you can
enable \"double tap\" in the
settings. with double tap you
instead press the key of the
color you currently are to jump"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dtt_label2" type="Label" parent="Sprite"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -334.0
margin_right = -500.0
margin_bottom = -252.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
