[gd_scene load_steps=5 format=2]

[ext_resource path="res://Source/Tutorials/introText.gd" type="Script" id=1]
[ext_resource path="res://Character models/Menues/Fonts/Tourmaline-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Character models/Tutorials/tutorial_background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 2
font_data = ExtResource( 2 )

[node name="recapButtons" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 781, 357 )
texture = ExtResource( 3 )

[node name="recap_label" type="Label" parent="Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -250.0
margin_right = -500.0
margin_bottom = -318.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="recap_label2" type="Label" parent="Sprite"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -500.0
margin_top = -359.0
margin_right = -500.0
margin_bottom = -250.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "press space to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
